fix amo widget z-index , increased to 999

--- a/src/index.css
+++ b/src/index.css
@@ -69,6 +69,11 @@
   font-family: 'Inter', sans-serif;
 }
 
+/* Fix amo widget style */
+.amo-button-holder {
+  z-index: 999;
+}
+
 h1 {
   /* font-size: 61px; */
   line-height: normal;
